[gd_scene load_steps=20 format=2]

[ext_resource path="res://Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://Obstacles/Obstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/GameUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/PlaceholderTile.png" type="Texture" id=5]
[ext_resource path="res://Assets/PlaceholderTileOverpass.png" type="Texture" id=6]
[ext_resource path="res://Levels/VictoryPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://Items/Item.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/technology-space-ambient-111307.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/369873__splicesound__trumpet-sad-chromatic-wah-wah.wav" type="AudioStream" id=10]
[ext_resource path="res://Obstacles/Bystanders.tscn" type="PackedScene" id=11]
[ext_resource path="res://Items/Undefined.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/LiberationSerif-Regular.ttf" type="DynamicFontData" id=13]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0, 1 )
colors = PoolColorArray( 0.403922, 0.180392, 0, 1, 0.85098, 0.360784, 0, 1, 0.858824, 0.690196, 0.498039, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 6 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 159, 47, 0, 47, 0, 0, 159, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 202.005, 67.0648, 35.9167, 68, 102.468, 37.5509, 165.546, 37.5509 )

[sub_resource type="TileSet" id=1]
0/name = "PlaceholderTile.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -5, 0, 159, 47 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "PlaceholderTileOverpass.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 27, 19, 280, 68 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 13 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
level_time = 50

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 13195.0
margin_top = -475.0
margin_right = 15020.0
margin_bottom = 14128.0
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 90.0
texture = SubResource( 5 )
expand = true

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 90, 450 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 100, 500 )

[node name="Obstacle" parent="." instance=ExtResource( 2 )]
position = Vector2( 991, 516 )

[node name="Obstacle2" parent="." instance=ExtResource( 2 )]
position = Vector2( 2594, 516 )

[node name="Obstacle3" parent="." instance=ExtResource( 2 )]
position = Vector2( 3334, 516 )

[node name="Obstacle4" parent="." instance=ExtResource( 2 )]
position = Vector2( 5023, 516 )

[node name="Obstacle5" parent="." instance=ExtResource( 2 )]
position = Vector2( 5124, 516 )
penalty = 3

[node name="Obstacle7" parent="." instance=ExtResource( 2 )]
position = Vector2( 7264, 516 )

[node name="Obstacle8" parent="." instance=ExtResource( 2 )]
position = Vector2( 7528, 516 )
penalty = 3

[node name="Obstacle9" parent="." instance=ExtResource( 2 )]
position = Vector2( 7800, 516 )
penalty = 4

[node name="SpawnArea" type="Position2D" parent="."]
position = Vector2( 1000, 520 )

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 40.0
one_shot = true

[node name="UI" parent="." instance=ExtResource( 4 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 150, 30 )
format = 1
tile_data = PoolIntArray( 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 0, 0, 1245222, 0, 0, 1245223, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1245228, 0, 0, 1245229, 0, 0, 1245230, 0, 0, 1245231, 0, 0, 1245232, 0, 0, 1245233, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1245239, 0, 0, 1245240, 0, 0, 1245241, 0, 0, 1245242, 0, 0, 1245243, 0, 0 )

[node name="OverpassTiles" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 64, 30 )
format = 1

[node name="Undefined" parent="." instance=ExtResource( 12 )]
position = Vector2( 6704, -83 )
scale = Vector2( 0.25, 0.25 )

[node name="Jewel" parent="." instance=ExtResource( 8 )]
position = Vector2( 2070, 131 )
scale = Vector2( 0.25, 0.25 )

[node name="VictoryPoint" parent="." instance=ExtResource( 7 )]
position = Vector2( 8912, 489 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 960, 540 )
stream = ExtResource( 9 )
volume_db = -15.0

[node name="FailAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 960, 540 )
stream = ExtResource( 10 )

[node name="Obstacle10" parent="." instance=ExtResource( 11 )]
position = Vector2( 5858, 445 )
penalty = 5

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 219.0
margin_top = 80.0
margin_right = 849.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 7 )
text = "Press RMB or equivalent to restart
Press MMB or equivalent to pause"

[connection signal="creating_overpass" from="Player" to="." method="_on_Player_creating_overpass"]
[connection signal="decrease_time" from="Player" to="." method="timer_down"]
[connection signal="victory" from="Player" to="." method="_on_Player_victory"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="start_game" from="UI" to="." method="new_game"]
[connection signal="unpause" from="UI" to="." method="unpause_game"]
